# Fix: wrap margin-top

--- a/main.css
+++ b/main.css
@@ -11,8 +11,7 @@ body {
 	left: 50%;
 	top: 50%;
 	margin-left: -270px;
-	margin-top: -362px;
-	/* margin: 118px 690px; */
+	margin-top: -480px;
 	background-color: #FFFFFF;
 	border: 1px solid #AACDFF;
 	box-sizing: border-box;
